--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "npm": "^10.3.0",
     "react": "^18.2.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14"
   },
   "devDependencies": {
     "@types/node": "^20",
